# forge-v2

./: .gitignore  AUDIT_AND_PLAN.md  CLAUDE_CODE_HANDOFF.md  GOVERNANCE_PROTOCOL.md  HOW_TO_MOUNT_FORGE.md  NEXT_STEP_DECISION.html  README.md  ROADMAP.html  SELF_IMPROVING_LOOP.html  STRATEGIC_MAP.html  SYSTEM_MAP_v2.html  USER_GUIDE.md  WHATS_NEXT.md
_legacy_forge/underwriteos/: .env.example  .gitignore  README.md  pyproject.toml
_legacy_forge/underwriteos/config/: rules_cdfi_standard.yaml  rules_colony_bank.yaml  rules_sba_sop_50_10.yaml
_legacy_forge/underwriteos/docs/: BUILD_STATUS.md  DAY_10_TTH_FINDINGS.md  DAY_3_LEARNINGS.md  DAY_6_TRAINING_LEARNINGS.md  PLAN.md
_legacy_forge/underwriteos/scripts/: run_mirzai_e2e.py
_legacy_forge/underwriteos/tests/: test_anthropic_client.py  test_cashflow.py  test_deal_type.py  test_debt_schedule.py  test_extract_1040.py  test_extract_1120s.py  test_extract_credit_report.py  test_extract_pfs_413.py  test_g8way.py  test_memo_narrative.py  test_memo_renderer.py  test_memo_template.py  test_ocr_postprocess.py  test_program.py  test_real_fixture.py  test_reconcile.py
_legacy_forge/underwriteos/tests/fixtures/: advanced_integrated_pain.json
_legacy_forge/underwriteos/underwriteos/: __init__.py  cashflow.py  deal_type.py  fixtures.py  program.py  reconcile.py
_legacy_forge/underwriteos/underwriteos/extract/: __init__.py  credit_report.py  debt_schedule.py  g8way.py  irs_transcript_1040.py  ocr.py  pfs_413.py  tax_return_1040.py  tax_return_1120s.py
_legacy_forge/underwriteos/underwriteos/memo/: __init__.py  narrative.py  (+4 more)
(+98 files in other folders)
